--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(detectnet main.cpp)
 target_include_directories(detectnet PRIVATE
     ${PROJECT_SOURCE_DIR}/src
     ${jetson-utils_INCLUDE_DIRS}
+    ${CUDAToolkit_INCLUDE_DIRS}
 )
 
 target_link_libraries(detectnet PRIVATE
